1089: Ensure subscribe button is center aligned

--- a/assets/src/sass/blocks/_mailchimp-subscribe.scss
+++ b/assets/src/sass/blocks/_mailchimp-subscribe.scss
@@ -114,6 +114,7 @@
 	}
 
 	#mc_signup_submit {
+		justify-content: center;
 		text-align: center;
 		width: 100%;
 
